--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "joi": "^17.8.3",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
